--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -416,9 +416,10 @@ section {
 
 /* Home Start  */
 .home {
-  justify-content: center;
   display: flex;
+  justify-content: center;
   align-items: center;
+  padding: 2rem;
 }
 
 .home-img img {
