--- a/webapp/views/index.html
+++ b/webapp/views/index.html
@@ -107,7 +107,8 @@
     </div>
     <div class="about-content" style="padding: 10rem 7rem 6%;">
       <h2 class="heading">About <span>Us</span></h2>
-      <p style="font-size: large; line-height: 3rem;">We are the team behind ZKDonate, a revolutionary donation application designed to provide a more secure and
+      <p style="font-size: large; line-height: 3rem;">We are the team behind ZKDonate, a revolutionary donation
+        application designed to provide a more secure and
         private way for individuals to make charitable contributions. Our goal is to leverage the power of zero
         knowledge proofs to ensure that donors can give to their favorite causes without the fear of exposing sensitive
         information.
@@ -133,102 +134,122 @@
     <div class="services-container">
       <div class="services-box">
         <i class='bx bx-code-alt'></i>
-        <h3>The Unicorn Foundation</h3>
-        <p>The Unicorn Foundation is a charitable organization dedicated to supporting research into the mythical
-          creatures known as unicorns. The foundation's mission is to uncover the secrets of these magical creatures and
-          promote their conservation and protection.</p>
-        
-      </div>
+        <h3>Hybrid Tech Foundation</h3>
+        <p>Hybrid Tech Foundation is a non-profit organization committed to advancing hybrid technology for a
+          sustainable future. The main mission of this is to support the research, development, and implementation of
+          hybrid
+          technology across various industries, including transportation, energy, and agriculture.
+        </p>
 
-      <div class="services-box">
-        <i class='bx bx-paint'></i>
-        <h3>The Time Traveler's Foundation</h3>
-        <p>The Time Traveler's Foundation is a nonprofit organization that aims to fund research and development of time
-          travel technology. The foundation's ultimate goal is to enable people to travel through time and witness
-          historical events firsthand, with the hope of promoting a better understanding of our past and future.</p>
-        
       </div>
 
       <div class="services-box">
         <i class='bx bx-bar-chart-alt'></i>
-        <h3>The Ninja Foundation</h3>
-        <p>The Ninja Foundation is a charity that supports the training and education of aspiring ninjas around the
-          world. The foundation's mission is to preserve the ancient art of ninjutsu and promote the values of
-          discipline, honor, and respect that are central to the ninja way of life.</p>
+        <h3>Sustainable Agriculture Charity</h3>
+        <p>Sustainable Agriculture Charity is an organization dedicated to promoting sustainable agricultural
+          practices and supporting farmers who implement these practices. Sustainable agriculture refers to a method of
+          farming that focuses on long-term environmental, social, and economic sustainability.</p>
       </div>
+      <div class="services-box">
+        <i class='bx bx-paint'></i>
+        <h3>Equal Education Foundation</h3>
+        <p>Equal Education Foundation is a non-profit organization that is dedicated to promoting equal educational
+          opportunities
+          for all students, regardless of their background or socioeconomic status. The organization's mission is to
+          provide students with the resources and support they need to achieve their full potential and succeed in life.
+        </p>
+
+      </div>
+
+
       <div class="container">
         <button class="button" id="connectButton">
           Connect wallet
-  
+
           <span id="loading">
-           <span>&bull;</span><span>&bull;</span><span>&bull;</span> 
+            <span>&bull;</span><span>&bull;</span><span>&bull;</span>
           </span>
         </button>
-  
+
         <div id="walletID">Your wallet is not connected yet.</div>
-  
-       <div id="mobileDeviceWarning">
-          If you are on a mobile phone, please use MetaMask 
+
+        <div id="mobileDeviceWarning">
+          If you are on a mobile phone, please use MetaMask
           application's browser to connect.
-       </div>
-   </div>
-  
-  <div class="alert" id="installAlert">
-    Please refresh your browser after installing the Metamask plugin
-  
-    <button class="button" id="reloadButton">Reload page</button>
-  </div>
+        </div>
+      </div>
+
+      <div class="alert" id="installAlert">
+        Please refresh your browser after installing the Metamask plugin
+
+        <button class="button" id="reloadButton">Reload page</button>
+      </div>
 
     </div>
   </section>
 
-<section class="portfolio" id="portfolio">
-  <h2 style="margin: 20px auto 80px;
+  <section class="portfolio" id="portfolio">
+    <h2 style="margin: 20px auto 80px;
     font-size: 38px;
     font-weight: 300;
     text-align: center;
     letter-spacing: 2px;
     line-height: 1.5;">Frequently Asked Questions</h2>
 
-<div style="visibility: hidden; position: absolute; width: 0px; height: 0px;">
-  <svg xmlns="http://www.w3.org/2000/svg">
-    <symbol viewBox="0 0 24 24" id="expand-more">
-      <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"/><path d="M0 0h24v24H0z" fill="none"/>
-    </symbol>
-    <symbol viewBox="0 0 24 24" id="close">
-      <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/><path d="M0 0h24v24H0z" fill="none"/>
-    </symbol>
-  </svg>
-</div>
+    <div style="visibility: hidden; position: absolute; width: 0px; height: 0px;">
+      <svg xmlns="http://www.w3.org/2000/svg">
+        <symbol viewBox="0 0 24 24" id="expand-more">
+          <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
+          <path d="M0 0h24v24H0z" fill="none" />
+        </symbol>
+        <symbol viewBox="0 0 24 24" id="close">
+          <path
+            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+          <path d="M0 0h24v24H0z" fill="none" />
+        </symbol>
+      </svg>
+    </div>
 
-<details open>
-  <summary>
-    Does this product have what I need?
-    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
-    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
-  </summary>
-  <p style="margin-top: 20px;">Totally. Totally does.</p>
-</details>
+    <details open>
+      <summary>
+        Does this product have what I need?
+        <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" />
+        </svg>
+        <svg class="control-icon control-icon-close" width="24" height="24" role="presentation">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" />
+        </svg>
+      </summary>
+      <p style="margin-top: 20px;">Totally. Totally does.</p>
+    </details>
 
-<details>
+    <details>
 
-  <summary>
-    Can I use it all the time?
-    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
-    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
-  </summary>
-  <p style="margin-top: 20px;">Of course you can, we won't stop you.</p>
-</details>
+      <summary>
+        Can I use it all the time?
+        <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" />
+        </svg>
+        <svg class="control-icon control-icon-close" width="24" height="24" role="presentation">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" />
+        </svg>
+      </summary>
+      <p style="margin-top: 20px;">Of course you can, we won't stop you.</p>
+    </details>
 
-<details>
-  <summary>
-    Are there any restrictions?    
-    <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" /></svg>
-    <svg class="control-icon control-icon-close" width="24" height="24" role="presentation"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" /></svg>
-  </summary>
-  <p style="margin-top: 20px;">Only your imagination my friend. Go forth!</p>
-</details>
-</section>
+    <details>
+      <summary>
+        Are there any restrictions?
+        <svg class="control-icon control-icon-expand" width="24" height="24" role="presentation">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#expand-more" />
+        </svg>
+        <svg class="control-icon control-icon-close" width="24" height="24" role="presentation">
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close" />
+        </svg>
+      </summary>
+      <p style="margin-top: 20px;">Only your imagination my friend. Go forth!</p>
+    </details>
+  </section>
   <!-- Portfolio Section Design  -->
   <!--  
   <section class="portfolio" id="portfolio">
