--- a/webapp/public/css/style.css
+++ b/webapp/public/css/style.css
@@ -15,6 +15,49 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/*========= MODAL CSS =============*/
+
+
+
+/*======================*/
 
   
   details {
@@ -295,6 +338,220 @@ body {
     color: var(--text-color);
     cursor: none;
 }
+
+
+
+
+/* ================== MULTI STEP MODAL ======================= */
+
+
+.multisteps-form__progress {
+  display: grid;
+  align-items: center;
+  margin-bottom: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+}
+
+.multisteps-form_btn {
+  display: inline-block;
+  padding: 0.5rem 2rem;
+  background: rgb(0, 151, 238);
+  background: linear-gradient(90deg, rgba(0, 151, 238, 1) 0%, rgba(0, 154, 237, 1) 50%, rgba(0, 191, 255, 1) 100%);
+  border-radius: 4rem;
+  box-shadow: none;
+  font-size: 2rem;
+  color: var(--bg-color);
+  letter-spacing: .1rem;
+  font-weight: 600;
+
+  transition: 0.5 ease;
+  transition: color 0.5 ease;
+  transition: box-shadow 0.5s ease;
+}
+
+
+
+.multisteps-form__progress-btn {
+  transition-property: all;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  position: relative;
+  padding-top: 20px;
+  color: rgba(108, 117, 125, 0.7);
+  text-indent: -9999px;
+  border: none;
+  background-color: transparent;
+  outline: none !important;
+  cursor: pointer;
+}
+@media (min-width: 500px) {
+  .multisteps-form__progress-btn {
+    text-indent: 0;
+  }
+}
+.multisteps-form__progress-btn:before {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  display: block;
+  width: 20px;
+  height: 20px;
+  content: '';
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  transition: all 0.15s linear 0s, -webkit-transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s;
+  transition: all 0.15s linear 0s, transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s;
+  transition: all 0.15s linear 0s, transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s, -webkit-transform 0.15s cubic-bezier(0.05, 1.09, 0.16, 1.4) 0s;
+  border: 2px solid currentColor;
+  border-radius: 50%;
+  background-color: #fff;
+  box-sizing: border-box;
+  z-index: 3;
+}
+.multisteps-form__progress-btn:after {
+  position: absolute;
+  top: 5px;
+  left: calc(-50% - 13px / 2);
+  transition-property: all;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  
+  transition-delay: 0s;
+  display: block;
+  width: 100%;
+  height: 2px;
+  content: '';
+  background-color: currentColor;
+  z-index: 1;
+}
+.multisteps-form__progress-btn:first-child:after {
+  display: none;
+}
+.multisteps-form__progress-btn.js-active {
+  color: rgb(0, 151, 238);
+  color: linear-gradient(90deg, hsl(202, 100%, 47%) 0%, rgba(0, 154, 237, 1) 50%, rgba(0, 191, 255, 1) 100%);
+}
+.multisteps-form__progress-btn.js-active:before {
+  -webkit-transform: translateX(-50%) scale(1.2);
+          transform: translateX(-50%) scale(1.2);
+  background-color: currentColor;
+}
+
+.multisteps-form__form {
+  position: relative;
+
+}
+
+.multisteps-form__panel {
+  top: 0;
+  left: 0;
+  height: 0;
+  opacity: 0;
+  
+  visibility: hidden;
+  
+}
+
+.multisteps-form__input {
+  padding: 15px;
+  border-radius: 8px;
+  border: 1px solid #dddddd;
+  background-color: #ffffff;
+  color: #888888;
+  font-size: 14px;
+  font-weight: bold;
+  width: 100%;
+  margin-bottom: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
+.multisteps-form__input:focus {
+  outline: none;
+  border: 1px solid #2c3e50;
+}
+
+.multisteps-form__select:focus {
+  outline: none;
+  border: 1px solid #2c3e50;
+}
+
+
+.multisteps-form__select {
+  padding: 15px;
+  border-radius: 8px;
+  border: 1px solid #dddddd;
+  background-color: #ffffff;
+  color: #888888;
+  font-size: 14px;
+  font-weight: bold;
+  width: 100%;
+  margin-bottom: 20px;
+  transition: all 0.3s ease-in-out;
+}
+
+.multisteps-form__panel.js-active {
+  width: 800px;
+  margin: 0 auto;
+  height: 600px;
+  opacity: 1;
+  visibility: visible;
+}
+.multisteps-form__panel[data-animation="scaleOut"] {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.multisteps-form__panel[data-animation="scaleOut"].js-active {
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+.multisteps-form__panel[data-animation="slideHorz"] {
+  left: 50px;
+}
+.multisteps-form__panel[data-animation="slideHorz"].js-active {
+  transition-property: all;
+  transition-duration: 0.25s;
+  transition-timing-function: cubic-bezier(0.2, 1.13, 0.38, 1.43);
+  transition-delay: 0s;
+  left: 0;
+}
+.multisteps-form__panel[data-animation="slideVert"] {
+  top: 30px;
+}
+.multisteps-form__panel[data-animation="slideVert"].js-active {
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  top: 0;
+}
+.multisteps-form__panel[data-animation="fadeIn"].js-active {
+  transition-property: all;
+  transition-duration: 0.3s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+}
+.multisteps-form__panel[data-animation="scaleIn"] {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+.multisteps-form__panel[data-animation="scaleIn"].js-active {
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+
+
+
+/* =========================================================== */
 
 
 @-webkit-keyframes AnimationName {
@@ -775,6 +1032,7 @@ span {
   color: var(--second-bg-color);
 }
 
+
 /* BreakPoints */
 
 @media (max-width: 1200px) {
@@ -911,5 +1169,7 @@ span {
     text-align: center;
     margin-top: 2rem;
   }
+
+  
 
 }
