--- a/webapp/views/index.html
+++ b/webapp/views/index.html
@@ -52,7 +52,7 @@
 
   <!-- header design  -->
   <header class="header">
-    <a href="#" class="logo">PROJECT NAME</a>
+    <a href="#" class="logo">WEB3 Donation</a>
 
     <i class="bx bx-menu" id="menu_icon"></i>
 
